[package]
name = "hexdial-updater"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hexdial-updater"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
zip = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
strip = "symbols"
